--- a/package.json
+++ b/package.json
@@ -18,5 +18,10 @@
   "bugs": {
     "url": "https://github.com/Earthstar/gerrit-report-dashboard/issues"
   },
-  "homepage": "https://github.com/Earthstar/gerrit-report-dashboard#readme"
+  "homepage": "https://github.com/Earthstar/gerrit-report-dashboard#readme",
+  "dependencies": {
+    "babel-cli": "^6.6.5",
+    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-react": "^6.5.0"
+  }
 }
