--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "build/main.js",
   "scripts": {
     "build": "./node_modules/babel-cli/bin/babel.js --presets react,es2015 src/ --watch --out-dir build/ --source-maps",
+    "lint": "./node_modules/eslint/bin/eslint.js src/main.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -24,5 +25,13 @@
     "babel-cli": "^6.6.5",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0"
+  },
+  "devDependencies": {
+    "eslint": "^2.7.0",
+    "eslint-config-airbnb": "^6.2.0",
+    "eslint-plugin-react": "^4.2.3"
+  },
+  "eslintConfig": {
+    "extends": "airbnb"
   }
 }
