--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "bundle": "./node_modules/webpack/bin/webpack.js",
     "dev": "./node_modules/webpack-dev-server/bin/webpack-dev-server.js --hot --inline",
     "lint": "./node_modules/eslint/bin/eslint.js src/*",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "./node_modules/karma/bin/karma start",
     "build": "npm run lint && npm run bundle"
   },
   "repository": {
@@ -39,6 +39,10 @@
     "eslint": "^2.7.0",
     "eslint-config-airbnb": "^6.2.0",
     "eslint-plugin-react": "^4.2.3",
+    "jasmine-core": "^2.4.1",
+    "karma": "^0.13.22",
+    "karma-chrome-launcher": "^0.2.3",
+    "karma-jasmine": "^0.3.8",
     "webpack-dev-server": "^1.14.1"
   },
   "eslintConfig": {
