--- a/package.json
+++ b/package.json
@@ -41,8 +41,11 @@
     "eslint-plugin-react": "^4.2.3",
     "jasmine-core": "^2.4.1",
     "karma": "^0.13.22",
+    "karma-babel-preprocessor": "^6.0.1",
     "karma-chrome-launcher": "^0.2.3",
     "karma-jasmine": "^0.3.8",
+    "karma-sourcemap-loader": "^0.3.7",
+    "karma-webpack": "^1.7.0",
     "webpack-dev-server": "^1.14.1"
   },
   "eslintConfig": {
